Package_Tools/pas_units/libav/libavformat/avio.pas

unit avio;

interface

uses
  fp_ffmpeg;

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


const
  AVIO_SEEKABLE_NORMAL = 1 shl 0;  
  AVIO_SEEKABLE_TIME = 1 shl 1;
type
  TAVIOInterruptCB = record
      callback : function (para1:pointer):longint;cdecl;
      opaque : pointer;
    end;
  PAVIOInterruptCB = ^TAVIOInterruptCB;
type  TAVIODirEntryType =  Longint;
  Const
    AVIO_ENTRY_UNKNOWN = 0;
    AVIO_ENTRY_BLOCK_DEVICE = 1;
    AVIO_ENTRY_CHARACTER_DEVICE = 2;
    AVIO_ENTRY_DIRECTORY = 3;
    AVIO_ENTRY_NAMED_PIPE = 4;
    AVIO_ENTRY_SYMBOLIC_LINK = 5;
    AVIO_ENTRY_SOCKET = 6;
    AVIO_ENTRY_FILE = 7;
    AVIO_ENTRY_SERVER = 8;
    AVIO_ENTRY_SHARE = 9;
    AVIO_ENTRY_WORKGROUP = 10;

type
  TAVIODirEntry = record
      name : Pchar;
      _type : longint;
      utf8 : longint;
      size : Tint64_t;
      modification_timestamp : Tint64_t;
      access_timestamp : Tint64_t;
      status_change_timestamp : Tint64_t;
      user_id : Tint64_t;
      group_id : Tint64_t;
      filemode : Tint64_t;
    end;
  PAVIODirEntry = ^TAVIODirEntry;
  PPAVIODirEntry = ^PAVIODirEntry;

type
  PAVIODirContext = type Pointer;
  PPAVIODirContext=^PAVIODirContext;
type
  TAVIODataMarkerType =  Longint;
  Const
    AVIO_DATA_MARKER_HEADER = 0;
    AVIO_DATA_MARKER_SYNC_POINT = 1;
    AVIO_DATA_MARKER_BOUNDARY_POINT = 2;
    AVIO_DATA_MARKER_UNKNOWN = 3;
    AVIO_DATA_MARKER_TRAILER = 4;
    AVIO_DATA_MARKER_FLUSH_POINT = 5;

type
  PAVIOContext = ^TAVIOContext;
  PPAVIOContext = ^PAVIOContext;
  TAVIOContext = record
      av_class : PAVClass;
      buffer : Pbyte;
      buffer_size : longint;
      buf_ptr : Pbyte;
      buf_end : Pbyte;
      opaque : pointer;
      read_packet : function (opaque:pointer; buf:Puint8_t; buf_size:longint):longint;cdecl;
      write_packet : function (opaque:pointer; buf:Puint8_t; buf_size:longint):longint;cdecl;
      seek : function (opaque:pointer; offset:Tint64_t; whence:longint):Tint64_t;cdecl;
      pos : Tint64_t;
      eof_reached : longint;
      error : longint;
      write_flag : longint;
      max_packet_size : longint;
      min_packet_size : longint;
      checksum : dword;
      checksum_ptr : Pbyte;
      update_checksum : function (checksum:dword; buf:Puint8_t; size:dword):dword;cdecl;
      read_pause : function (opaque:pointer; pause:longint):longint;cdecl;
      read_seek : function (opaque:pointer; stream_index:longint; timestamp:Tint64_t; flags:longint):Tint64_t;cdecl;
      seekable : longint;
      direct : longint;
      protocol_whitelist : Pchar;
      protocol_blacklist : Pchar;
      write_data_type : function (opaque:pointer; buf:Puint8_t; buf_size:longint; _type:TAVIODataMarkerType; time:Tint64_t):longint;cdecl;
      ignore_boundary_point : longint;
      buf_ptr_max : Pbyte;
      bytes_read : Tint64_t;
      bytes_written : Tint64_t;
    end;

function avio_find_protocol_name(url:Pchar):Pchar;cdecl;external libavformat;
function avio_check(url:Pchar; flags:longint):longint;cdecl;external libavformat;
function avio_open_dir(s:PPAVIODirContext; url:Pchar; options:PPAVDictionary):longint;cdecl;external libavformat;
function avio_read_dir(s:PAVIODirContext; next:PPAVIODirEntry):longint;cdecl;external libavformat;
function avio_close_dir(s:PPAVIODirContext):longint;cdecl;external libavformat;
procedure avio_free_directory_entry(entry:PPAVIODirEntry);cdecl;external libavformat;

function avio_alloc_context(buffer:Pbyte; buffer_size:longint; write_flag:longint; opaque:pointer; read_packet:function (opaque:pointer; buf:Puint8_t; buf_size:longint):longint; 
           write_packet:function (opaque:pointer; buf:Puint8_t; buf_size:longint):longint; write_packet:function (opaque:pointer; buf:Puint8_t; buf_size:longint):longint; seek:function (opaque:pointer; offset:Tint64_t; whence:longint):Tint64_t):PAVIOContext;cdecl;external libavformat;
{*
 * Free the supplied IO context and everything associated with it.
 *
 * @param s Double pointer to the IO context. This function will write NULL
 * into s.
  }
procedure avio_context_free(s:PPAVIOContext);cdecl;external libavformat;
procedure avio_w8(s:PAVIOContext; b:longint);cdecl;external libavformat;
procedure avio_write(s:PAVIOContext; buf:Pbyte; size:longint);cdecl;external libavformat;
procedure avio_wl64(s:PAVIOContext; val:Tuint64_t);cdecl;external libavformat;
procedure avio_wb64(s:PAVIOContext; val:Tuint64_t);cdecl;external libavformat;
procedure avio_wl32(s:PAVIOContext; val:dword);cdecl;external libavformat;
procedure avio_wb32(s:PAVIOContext; val:dword);cdecl;external libavformat;
procedure avio_wl24(s:PAVIOContext; val:dword);cdecl;external libavformat;
procedure avio_wb24(s:PAVIOContext; val:dword);cdecl;external libavformat;
procedure avio_wl16(s:PAVIOContext; val:dword);cdecl;external libavformat;
procedure avio_wb16(s:PAVIOContext; val:dword);cdecl;external libavformat;
{*
 * Write a NULL-terminated string.
 * @return number of bytes written.
  }
function avio_put_str(s:PAVIOContext; str:Pchar):longint;cdecl;external libavformat;
{*
 * Convert an UTF-8 string to UTF-16LE and write it.
 * @param s the AVIOContext
 * @param str NULL-terminated UTF-8 string
 *
 * @return number of bytes written.
  }
function avio_put_str16le(s:PAVIOContext; str:Pchar):longint;cdecl;external libavformat;
{*
 * Convert an UTF-8 string to UTF-16BE and write it.
 * @param s the AVIOContext
 * @param str NULL-terminated UTF-8 string
 *
 * @return number of bytes written.
  }
function avio_put_str16be(s:PAVIOContext; str:Pchar):longint;cdecl;external libavformat;
{*
 * Mark the written bytestream as a specific type.
 *
 * Zero-length ranges are omitted from the output.
 *
 * @param s    the AVIOContext
 * @param time the stream time the current bytestream pos corresponds to
 *             (in AV_TIME_BASE units), or AV_NOPTS_VALUE if unknown or not
 *             applicable
 * @param type the kind of data written starting at the current pos
  }
procedure avio_write_marker(s:PAVIOContext; time:Tint64_t; _type:TAVIODataMarkerType);cdecl;external libavformat;
{*
 * ORing this as the "whence" parameter to a seek function causes it to
 * return the filesize without seeking anywhere. Supporting this is optional.
 * If it is not supported then the seek function will return <0.
  }
const
  AVSEEK_SIZE = $10000;  
{*
 * Passing this flag as the "whence" parameter to a seek function causes it to
 * seek by any means (like reopening and linear reading) or other normally unreasonable
 * means that can be extremely slow.
 * This may be ignored by the seek code.
  }
  AVSEEK_FORCE = $20000;  
{*
 * fseek() equivalent for AVIOContext.
 * @return new position or AVERROR.
  }

function avio_seek(s:PAVIOContext; offset:Tint64_t; whence:longint):Tint64_t;cdecl;external libavformat;
{*
 * Skip given number of bytes forward
 * @return new position or AVERROR.
  }
function avio_skip(s:PAVIOContext; offset:Tint64_t):Tint64_t;cdecl;external libavformat;
{*
 * ftell() equivalent for AVIOContext.
 * @return position or AVERROR.
  }
{xxxxxxxxxxxx
static av_always_inline int64_t avio_tell(AVIOContext *s)

    return avio_seek(s, 0, SEEK_CUR);
